--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^9.1.3",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-stylus": "^1.0.1",
+    "axios": "^0.23.0",
     "classnames": "^2.2.6",
     "coffeescript": "^2.4.1",
     "next": "^9.3.5",
