--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.19.1",
+    "@blueprintjs/popover2": "^0.12.8",
     "@macrostrat/hyper": "^1.4.2",
     "@macrostrat/ui-components": "^1",
     "@mdx-js/loader": "^1.5.1",
