--- a/package.json
+++ b/package.json
@@ -15,19 +15,13 @@
     "@mdx-js/loader": "^1.5.1",
     "@next/mdx": "^9.1.3",
     "@zeit/next-css": "^1.0.1",
-    "@zeit/next-stylus": "^1.0.1",
     "axios": "^0.23.0",
     "classnames": "^2.2.6",
-    "coffeescript": "^2.4.1",
-    "next": "^9.3.5",
-    "next-coffeescript": "^1.3.0",
+    "next": "12.0.2",
     "nextjs-redirect": "^1.0.2",
-    "react": "16.10.2",
-    "react-dom": "16.10.2",
-    "react-hyperscript": "^3.2.0",
-    "react-infinite-scroller": "^1.2.4",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4",
     "stylus": "^0.54.7"
   },
   "devDependencies": {
@@ -36,6 +30,6 @@
     "bulk": "^2.0.1",
     "concurrently": "^5.1.0",
     "linklocal": "^2.8.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.3.2"
   }
 }
